codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_col_width_mode_fixed_scroll.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_before_after_scroll_snapshot(ColumnWidthMode::Fixed, 96)"
---
before scroll:
                                                                                                
  调 试                                                                                           
                                                                                                
› 1. 项 目  1                 desc 1                                                              
  2. 项 目  2                 desc 2                                                              
  3. 项 目  3                 desc 3                                                              
  4. 项 目  4                 desc 4                                                              
  5. 项 目  5                 desc 5                                                              
  6. 项 目  6                 desc 6                                                              
  7. 项 目  7                 desc 7                                                              
  8. 项 目  8                 desc 8                                                              
                                                                                                

after scroll:
                                                                                                
  调 试                                                                                           
                                                                                                
  2. 项 目  2                 desc 2                                                              
  3. 项 目  3                 desc 3                                                              
  4. 项 目  4                 desc 4                                                              
  5. 项 目  5                 desc 5                                                              
  6. 项 目  6                 desc 6                                                              
  7. 项 目  7                 desc 7                                                              
  8. 项 目  8                 desc 8                                                              
› 9. 项 目  9 具 有 故 意 设 置 的 … desc 9
