codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_footer_note_wraps.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 40)"
---
                                        
  选 择 批 准 模 式                           
                                        
› 1. 只 读 （ 当 前 ）   可 读 取 文 件            
                                        
  提 示 ： 运 行  /setup-default-sandbox 以 允 
  许 联 网 访 问 。                           
  按  enter 确 认 ， 按  esc 返 回
