codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_narrow_width_preserves_rows.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 24)"
---
                        
  调 试                   
                        
› 1. 项 目  1             
             xxxxxxxxx  
             x          
  2. 项 目  2             
             xxxxxxxxx  
             x          
  3. 项 目  3             
             xxxxxxxxx  
             x
