codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: render_lines(&view)
---
                                                
  Select Approval Mode                          
                                                
› 1. Read Only (current)  可 读 取 文 件             
  2. 完 全 访 问              可 编 辑 文 件             
                                                
  按  enter 确 认 ， 按  esc 返 回
